Fix to alignment on panel buttons, hiding category list improved on IdeaBase work

--- a/prod/scss/partials/_projects.scss
+++ b/prod/scss/partials/_projects.scss
@@ -670,7 +670,7 @@
   }
 }
 
-.js .project-category__list {
+.project-category__list {
   max-height: 0px;
   overflow: hidden;
   padding: 0 1em;
